[tool.poetry]
name = "ahc014"
version = "0.1.0"
description = ""
authors = ["terry_u16 <terry-u16@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
optuna = "^3.0.2"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
